--- a/1-Scaling Data Analysis/1-pandas.ipynb
+++ b/1-Scaling Data Analysis/1-pandas.ipynb
@@ -9,6 +9,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Original blogpost example on Dask dataframes in HDFS: http://matthewrocklin.com/blog/work/2016/02/22/dask-distributed-part-2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
